changed routes to reflect db changes
